Fix contact cutoff in page 1

--- a/react-plugins/src/views/Generators/Add/UploadPage/styles.scss
+++ b/react-plugins/src/views/Generators/Add/UploadPage/styles.scss
@@ -8,6 +8,7 @@
         border: $width-separator-thin solid $color-separator;
         padding: $spacing-medium;
         width: 320px;
+        max-width: 460px;
 
         .file-loader {
             display: flex;
@@ -24,6 +25,8 @@
 
             p {
                 margin: 8px 0;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
 
